<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
        <ImageView
            android:id="@+id/restaurant_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/restaurant_image"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/image_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_credit"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_img"
            app:layout_constraintHorizontal_bias="0.896"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/restaurant_img"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/restaurant_img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/description"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/address_label"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/address_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/restaurant_address"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/phone_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/address"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/phone_number_label"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/phone_number_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/phone_number"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/working_hours_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/working_hours_label"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/sat_to_thu_working_hors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/working_hours_text_view"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/sat_to_thu"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/fri_working_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/sat_to_thu_working_hors"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/fri"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>